--- a/conf.dist.yml
+++ b/conf.dist.yml
@@ -3,3 +3,4 @@ twitter:
   consumer_secret: 'your_consumer_secret'
   access_token: 'your_access_token'
   access_token_secret: 'your_access_token_secret'
+  bot: 'Twitter user name for the bot'
